--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "mind"
 version = "0.1.0"
 authors = ["Arijit Basu <sayanarijit@gmail.com>"]
 edition = "2018"
+description = "Productive mind"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
