--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "mind"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Arijit Basu <sayanarijit@gmail.com>"]
 edition = "2018"
 description = "Productive mind"
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/sayanarijit/mind"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
