--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mind"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Arijit Basu <sayanarijit@gmail.com>"]
 edition = "2018"
 description = "Productive mind"
@@ -16,5 +16,5 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = "3.0.0-beta.1"
-colored = "1.9"
 dirs = "3.0"
+termion = "1.5"
