--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mind"
-version = "0.1.5"
+version = "0.1.6"
 authors = ["Arijit Basu <sayanarijit@gmail.com>"]
 edition = "2018"
 description = "Productive mind"
@@ -17,3 +17,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "3.0"
 termion = "1.5"
+chrono-humanize = "0.0.11"
